feat: add README.md

--- a/pom.xml
+++ b/pom.xml
@@ -60,7 +60,7 @@
     </dependencies>
 
     <build>
-        <finalName>demo-${project.version}</finalName>
+        <finalName>demo</finalName>
         <plugins>
             <plugin>
                 <groupId>org.springframework.boot</groupId>
